tests/fixtures/errors/dup_def.z
# E0003: duplicate unit-level definition.
x: 5
x: 6
main: function is {}
